--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,22 +10,22 @@ jobs:
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4  # 更新至v4
+      uses: actions/checkout@v4
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v4  # 更新至v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
 
     - name: Setup Android SDK
-      uses: android-actions/setup-android@v2
+      uses: android-actions/setup-android@v3
 
     - name: Build APK
       run: ./gradlew assembleDebug
 
     - name: Upload APK
-      uses: actions/upload-artifact@v4  # 关键：v3已弃用，必须改为v4
+      uses: actions/upload-artifact@v4
       with:
         name: VoiceShifter-APK
         path: app/build/outputs/apk/debug/app-debug.apk
